add google font - mat; icons - edit README

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ACE Computer | Manchester, NH | (603) 669-3022</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -13,7 +17,7 @@
   <section id="site-header" class="container">
     <nav id="top">
       <ul class="top-nav">
-        <li><a href="#">home</a></li>
+        <li><a href="#"><i class="material-icons">home</i></a></li>
         <li><a href="#">computer repair</a></li>
         <li><a href="#">spyware removal</a></li>
         <li><a href="#">data recovery</a></li>
@@ -34,7 +38,7 @@
   </section>
 
   <section class="main container">
-    <h1 class="last">Computer & Laptop Repair | Virus Removal</h1>
+    <h1 class="last">Computer & Laptop Repair | <i class="material-icons med">bug_report</i>Virus Removal</h1>
     <h2>ACE Computer, Manchester NH Computer and Networking Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair and maintain your computers and network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request, and dispatching a professional, friendly, and qualified service technician to get you up and running quickly.</p>
 
@@ -50,9 +54,9 @@
   </section>
 
   <footer id="footer">
-    <p>&copy;1995-<span id="year"></span> <a href="#">ACE Computer</a><br />
-      1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103<br />
-      Tel: (603) 669-3022</p>
+    <p>&copy;1995-<span id="year"></span> <a href="#">ACE Computer</a></p>
+    <p><i class="material-icons location_on">location_on</i>1271 Elm Street</i> &nbsp;| &nbsp; Manchester, NH 03103</p>
+    <p>(603) 669-3022</p>
   </footer>
 
   <script>
