--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -17,7 +17,7 @@
   <section id="site-header" class="container">
     <nav id="top">
       <ul class="top-nav">
-        <li><a href="#"><i class="material-icons">home</i></a></li>
+        <li><a href="#"><span class="material-symbols-outlined">home</span></a></li>
         <li><a href="#">computer repair</a></li>
         <li><a href="#">spyware removal</a></li>
         <li><a href="#">data recovery</a></li>
