change link colors - adj hero font sizes rmv css junk

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -38,7 +38,7 @@
   </section>
 
   <section class="main container">
-    <h1 class="last">Computer & Laptop Repair | Virus Removal</h1>
+    <h1 class="last">Computer and Laptop Repair | Virus Removal</h1>
     <h2>ACE Computer, Manchester NH Computer and Networking Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair and maintain your computers and network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request, and dispatching a professional, friendly, and qualified service technician to get you up and running quickly.</p>
 
