simplify css link-hover states

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="header-text">
         <h1 class="site-title">ACE Computer</h1>
-        <h2 class="site-description">Your PC &amp; Networking Specialists</h2>
+        <h2 class="site-description">Your PC / Laptop Repair & Networking Specialists</h2>
         <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
       </div>
     </div>
