--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ACE Computer | Manchester, NH | (603) 669-3022</title>
+  <title>ACE Computer | Computer Laptop Repair Network Specialist | Manchester, NH | (603) 669-3022</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
         <li><a href="#">spyware removal</a></li>
         <li><a href="#">data recovery</a></li>
         <li><a href="#">networks</a></li>
-        <li><a href="#footer">contact</a></li>
+        <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
     <div class="overlay">
@@ -32,6 +32,7 @@
       <div class="header-text">
         <h1 class="site-title">ACE Computer</h1>
         <h2 class="site-description">Your PC / Laptop Repair & Networking Specialists</h2>
+        <h3>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</h3>
         <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
       </div>
     </div>
@@ -51,6 +52,32 @@
     <h2>Computer Upgrades and Maintenance</h2>
     <p>While we’re at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
     <p class="last">Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
+
+    <hr style="margin-bottom: 2rem;">
+
+    <h2 id="contact">Our Store Hours</h2>
+    <p class="last">Monday – Friday : 8:30AM to 5:30PM<br />
+      Saturday : 10:00AM to 12:30PM</p>
+
+    <h2>Reach Out To Us</h2>
+    <p class="last">Phone: <a href="tel:603-669-3022">(603) 669-3022</a><br />
+      Fax: 603-669-3420<br />
+      Emergency: <a href="tel:603-235-2752">(603) 235-2752</a></p>
+
+    <h2>Don't want to call?</h2>
+    <p class="last">No problem!<br />
+      Email your computer related problems &amp; questions to:<br />
+      > <a href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a>
+    </p>
+
+    <h2>Payment Options</h2>
+    <p class="last">We accept <i>all</i> major credit cards, checks &amp; cash.</p>
+
+    <h2>You Can Find Us Here</h2>
+    <iframe id="map" class="last" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" width=100% height="400" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <hr>
+    
   </section>
 
   <footer id="footer">
@@ -58,7 +85,6 @@
     <p>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</p>
     <p>(603) 669-3022</p>
   </footer>
-
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
