--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -67,17 +67,14 @@
     <h2>Don't want to call?</h2>
     <p class="last">No problem!<br />
       Email your computer related problems &amp; questions to:<br />
-      > <a href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a>
-    </p>
+      > <a href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
 
     <h2>Payment Options</h2>
     <p class="last">We accept <i>all</i> major credit cards, checks &amp; cash.</p>
 
     <h2>You Can Find Us Here</h2>
-    <iframe id="map" class="last" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" width=100% height="400" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+    <iframe id="map" class="last" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <hr>
-    
   </section>
 
   <footer id="footer">
