css tweaks adj anchors

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -53,9 +53,9 @@
     <p>While we’re at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
     <p class="last">Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
 
-    <hr style="margin-bottom: 2rem;">
+    <hr id="contact" style="margin-bottom: 2rem;">
 
-    <h2 id="contact">Our Store Hours</h2>
+    <h2>Our Store Hours</h2>
     <p class="last">Monday – Friday : 8:30AM to 5:30PM<br />
       Saturday : 10:00AM to 12:30PM</p>
 
