added new text - google map to homepage

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <section id="site-header" class="container">
+  <section id="site-header">
     <nav id="top">
       <ul class="top-nav">
         <li><a href="#"><span class="material-symbols-outlined">home</span></a></li>
@@ -31,56 +31,76 @@
       </div>
       <div class="header-text">
         <h1 class="site-title">ACE Computer</h1>
-        <h2 class="site-description">Your PC / Laptop Repair & Networking Specialists</h2>
+        <h2 class="site-description">Your PC + Laptop Repair & Networking Specialists</h2>
         <h3>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</h3>
         <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
       </div>
     </div>
   </section>
 
-  <section class="main container">
-    <h1 class="last">Computer and Laptop Repair | Virus Removal</h1>
+  <section class="main">
+    <h1 class="last">Computer &amp; Laptop Repair | Virus Removal</h1>
+
     <h2>ACE Computer, Manchester NH Computer and Networking Specialists</h2>
-    <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair and maintain your computers and network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request, and dispatching a professional, friendly, and qualified service technician to get you up and running quickly.</p>
+    <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
+
+    <h2>What Makes ACE Computer Different?</h2>
+    <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors. And we care about you &amp; your quality of life, both on the job &amp; while enjoying our great community.</p>
+    <p><strong>Ace Computer</strong> is a professional computer repair &amp; networking consulting firm located in <strong>Manchester, New Hampshire</strong>. Our highly trained staff &amp; consultants are dedicated to providing your company with excellent service &amp; support with the utmost in professionalism &amp; experience.
+    <p class="last">Here is a list of services that we can offer you or your company:</p>
+
+    <ul class="about-list">
+      <li>Expert network design, installation, &amp; support.</li>
+      <li>Computer &amp; Printer repairs &amp; upgrades.</li>
+      <li>Free in store estimates.</li>
+      <li>Spyware &amp; Virus removal.</li>
+      <li>Data Recovery.</li>
+      <li>PC &amp; Mac rentals.</li>
+      <li><a href="#emergency">Emergency</a> services.</li>
+      <li>Website design &amp hosting.</li>
+      <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX.</li>
+    </ul>
 
     <h2>Save with On-Site Computer Repair</h2>
-    <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site <a href="#">computer repair</a> means that we come to your office to repair your computers – no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
+    <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site <a href="#">computer repair</a> means that we come to your office to repair your computers - no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
 
     <h2>Free In-Store Consultation and Estimate</h2>
-    <p class="last">That’s right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they’re working as needed.</p>
+    <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
 
     <h2>Computer Upgrades and Maintenance</h2>
-    <p>While we’re at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
-    <p class="last">Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
+    <p>While we're at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
+    <p>Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
 
-    <hr id="contact" style="margin-bottom: 2rem;">
+    <!-- don't need the line here <hr id="contact" class="need-space"> -->
 
-    <h2>Our Store Hours</h2>
-    <p class="last">Monday – Friday : 8:30AM to 5:30PM<br />
-      Saturday : 10:00AM to 12:30PM</p>
+    <div id="contact" class="bottom-section">
+      <h2>Office Hours</h2>
+      <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
+        Saturday : 10:00AM to 12:30PM</p>
 
-    <h2>Reach Out To Us</h2>
-    <p class="last">Phone: <a href="tel:603-669-3022">(603) 669-3022</a><br />
-      Fax: 603-669-3420<br />
-      Emergency: <a href="tel:603-235-2752">(603) 235-2752</a></p>
+      <h2 id="emergency">Reach Out To Us</h2>
+      <p class="last">Phone: <a href="tel:603-669-3022">(603) 669-3022</a><br />
+        Emergency: <a href="tel:603-235-2752">(603) 235-2752</a><br />
+        Fax: (603) 669-3420</p>
 
-    <h2>Don't want to call?</h2>
-    <p class="last">No problem!<br />
-      Email your computer related problems &amp; questions to:<br />
-      > <a href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
+      <h2>Yes, You Can Email Us Too</h2>
+      <p class="last">Email your computer related problems &amp; questions to: <a href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
 
-    <h2>Payment Options</h2>
-    <p class="last">We accept <i>all</i> major credit cards, checks &amp; cash.</p>
+      <h2>Payment Options</h2>
+      <p class="last">We accept all major credit cards, checks &amp; cash.</p>
 
-    <h2>You Can Find Us Here</h2>
-    <iframe id="map" class="last" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <hr>
+      <h2>Our Location / Directions</h2>
+      <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <!-- don't need this line either <hr> -->
+
   </section>
 
   <footer id="footer">
-    <p>&copy;1995-<span id="year"></span> <a href="#">ACE Computer</a></p>
+    <p>&copy;2003-<span id="year"></span> <a href="#">ACE Computer</a></p>
     <p>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</p>
-    <p>(603) 669-3022</p>
+    <p><a href="tel:603-669-3022">(603) 669-3022</a></p>
   </footer>
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
