restructure #site-header

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -25,21 +25,23 @@
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
-    <div class="overlay">
-      <div id="logo">
-        <img src="img/ace-logo.png" alt="">
+    <section class="hero-container">
+      <div class="overlay">
+        <div id="logo">
+          <img src="img/ace-logo.png" alt="">
+        </div>
+        <div class="header-text">
+          <h1 class="site-title">ACE Computer</h1>
+          <h2 class="site-description">PC Repair & Networking Specialists</h2>
+          <h3>1271 Elm Street  |  Manchester, NH 03103</h3>
+          <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
+        </div>
       </div>
-      <div class="header-text">
-        <h1 class="site-title">ACE Computer</h1>
-        <h2 class="site-description">Your PC + Laptop Repair & Networking Specialists</h2>
-        <h3>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</h3>
-        <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
-      </div>
-    </div>
+    </section>
   </section>
 
   <section class="main">
-    <h1 class="last">Computer &amp; Laptop Repair | Virus Removal</h1>
+    <h1 class="last">Computer &amp; Laptop Repair | Data Recovery & Spyware, Virus Removal</h1>
 
     <h2>ACE Computer, Manchester NH Computer and Networking Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
@@ -70,9 +72,7 @@
     <h2>Computer Upgrades and Maintenance</h2>
     <p>While we're at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
     <p>Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
-
     <!-- don't need the line here <hr id="contact" class="need-space"> -->
-
     <div id="contact" class="bottom-section">
       <h2>Office Hours</h2>
       <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
@@ -92,9 +92,7 @@
       <h2>Our Location / Directions</h2>
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-
     <!-- don't need this line either <hr> -->
-
   </section>
 
   <footer id="footer">
