fix #contact anchors - css tweaks

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -33,7 +33,7 @@
         <div class="header-text">
           <h1 class="site-title">ACE Computer</h1>
           <h2 class="site-description">PC Repair & Networking Specialists</h2>
-          <h3>1271 Elm Street  |  Manchester, NH 03103</h3>
+          <h3>1271 Elm Street | Manchester, NH 03103</h3>
           <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
         </div>
       </div>
@@ -49,7 +49,7 @@
     <h2>What Makes ACE Computer Different?</h2>
     <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors. And we care about you &amp; your quality of life, both on the job &amp; while enjoying our great community.</p>
     <p><strong>Ace Computer</strong> is a professional computer repair &amp; networking consulting firm located in <strong>Manchester, New Hampshire</strong>. Our highly trained staff &amp; consultants are dedicated to providing your company with excellent service &amp; support with the utmost in professionalism &amp; experience.
-    <p class="last">Here is a list of services that we can offer you or your company:</p>
+    <p>Here is a list of services that we can offer you or your company:</p>
 
     <ul class="about-list">
       <li>Expert network design, installation, &amp; support.</li>
@@ -58,7 +58,7 @@
       <li>Spyware &amp; Virus removal.</li>
       <li>Data Recovery.</li>
       <li>PC &amp; Mac rentals.</li>
-      <li><a href="#emergency">Emergency</a> services.</li>
+      <li><a href="#contact">Emergency</a> services.</li>
       <li>Website design &amp hosting.</li>
       <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX.</li>
     </ul>
@@ -72,13 +72,14 @@
     <h2>Computer Upgrades and Maintenance</h2>
     <p>While we're at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
     <p>Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
-    <!-- don't need the line here <hr id="contact" class="need-space"> -->
-    <div id="contact" class="bottom-section">
+
+    <span id="contact">&nbsp;</span>
+    <div class="main-bottom">
       <h2>Office Hours</h2>
       <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
         Saturday : 10:00AM to 12:30PM</p>
 
-      <h2 id="emergency">Reach Out To Us</h2>
+      <h2>Reach Out To Us</h2>
       <p class="last">Phone: <a href="tel:603-669-3022">(603) 669-3022</a><br />
         Emergency: <a href="tel:603-235-2752">(603) 235-2752</a><br />
         Fax: (603) 669-3420</p>
