--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -73,7 +73,7 @@
     <p>While we're at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
     <p>Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
 
-    <span id="contact">&nbsp;</span>
+    <span id="contact">&nbsp;</span><!-- PAGE ANCHOR - CSS MEDIA QUERIES ACCOMODATE VARIED NAV HEIGHT -->
     <div class="main-bottom">
       <h2>Office Hours</h2>
       <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
@@ -93,7 +93,6 @@
       <h2>Our Location / Directions</h2>
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <!-- don't need this line either <hr> -->
   </section>
 
   <footer id="footer">
@@ -101,6 +100,7 @@
     <p>1271 Elm Street &nbsp;| &nbsp; Manchester, NH 03103</p>
     <p><a href="tel:603-669-3022">(603) 669-3022</a></p>
   </footer>
+
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
