max-with 1600px - max main 800px - readability

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <section id="site-header">
+
     <nav id="top">
       <ul class="top-nav">
         <li><a href="#"><span class="material-symbols-outlined">home</span></a></li>
@@ -25,19 +26,24 @@
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
+
     <section class="hero-container">
       <div class="overlay">
+
         <div id="logo">
           <img src="img/ace-logo.png" alt="">
         </div>
+
         <div class="header-text">
           <h1 class="site-title">ACE Computer</h1>
           <h2 class="site-description">PC Repair & Networking Specialists</h2>
           <h3>1271 Elm Street | Manchester, NH 03103</h3>
           <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
         </div>
+
       </div>
     </section>
+
   </section>
 
   <section class="main">
@@ -73,7 +79,8 @@
     <p>While we're at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
     <p>Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
 
-    <span id="contact">&nbsp;</span><!-- PAGE ANCHOR - CSS MEDIA QUERIES ACCOMODATE VARIED NAV HEIGHT -->
+    <!-- PAGE ANCHOR - ACCOMODATE VARIED NAV HEIGHT -->
+    <span id="contact">&nbsp;</span>
     <div class="main-bottom">
       <h2>Office Hours</h2>
       <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
