--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -53,7 +53,7 @@
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
 
     <h2>What Makes ACE Computer Different?</h2>
-    <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors. And we care about you &amp; your quality of life, both on the job &amp; while enjoying our great community.</p>
+    <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors - and we care about you &amp; your quality of life, both on the job &amp; while out enjoying our great community.</p>
     <p><strong>Ace Computer</strong> is a professional computer repair &amp; networking consulting firm located in <strong>Manchester, New Hampshire</strong>. Our highly trained staff &amp; consultants are dedicated to providing your company with excellent service &amp; support with the utmost in professionalism &amp; experience.
     <p>Here is a list of services that we can offer you or your company:</p>
 
@@ -69,15 +69,15 @@
       <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX.</li>
     </ul>
 
-    <h2>Save with On-Site Computer Repair</h2>
+    <h2>Save With On-Site Computer Repair</h2>
     <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site <a href="#">computer repair</a> means that we come to your office to repair your computers - no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
 
     <h2>Free In-Store Consultation and Estimate</h2>
     <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
 
     <h2>Computer Upgrades and Maintenance</h2>
-    <p>While we're at your offices, we can also study your existing computer systems, consult with you to find out what your company needs to be able to do, and deliver a proposal and estimate designed to improve your system (if required) based upon what is needed to increase your business production.</p>
-    <p>Find out about our Proactive Service and Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in good running condition.</p>
+    <p>While we're at your office(s), we can also study your existing computer systems, consult with you to find out what your company needs to function efficiently, and deliver a proposal &amp; estimate designed to improve your system (if required) based upon what is needed for your specific needs.</p>
+    <p>Find out about our Proactive Service &amp; Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in their proper running condition.</p>
 
     <!-- PAGE ANCHOR - ACCOMODATE VARIED NAV HEIGHT -->
     <span id="contact">&nbsp;</span>
@@ -97,7 +97,9 @@
       <h2>Payment Options</h2>
       <p class="last">We accept all major credit cards, checks &amp; cash.</p>
 
-      <h2>Our Location / Directions</h2>
+      <h2>Location / Directions</h2>
+      <p>1271 Elm Street<br />
+        Manchester, NH 03103</p>
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
