add nav-links - adjustments

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -19,7 +19,7 @@
     <nav id="top">
       <ul class="top-nav">
         <li><a href="#"><span class="material-symbols-outlined">home</span></a></li>
-        <li><a href="#">computer repair</a></li>
+        <li><a href="#repair">computer repair</a></li>
         <li><a href="#">spyware removal</a></li>
         <li><a href="#">data recovery</a></li>
         <li><a href="#">networks</a></li>
@@ -69,8 +69,8 @@
       <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX.</li>
     </ul>
 
-    <h2>Save With On-Site Computer Repair</h2>
-    <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site <a href="#">computer repair</a> means that we come to your office to repair your computers - no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
+    <h2 id="repair">Save With On-Site Computer Repair</h2>
+    <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site computer repair means that we come to your office to repair your computers - no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
 
     <h2>Free In-Store Consultation and Estimate</h2>
     <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
