complete adding all orgin text - add anchor links

--- a/ace-comp/pages/computer-repairs.html
+++ b/ace-comp/pages/computer-repairs.html
@@ -1,21 +1,21 @@
 Ace Computer - Computer Repairs
 
-Computer Running Slow – Virus Removal
+Computer Running Slow - Virus Removal
 
 Help for your PC
 
-Not sure if your computer has contracted spyware or a deadly virus? If you’ve noticed a dramatic drop in your PC’s performance, chances are it could have.
+Not sure if your computer has contracted spyware or a deadly virus? If you've noticed a dramatic drop in your PC's performance, chances are it could have.
 
 ACE Computer is ready to diagnose and remove any foreign programs quickly and for a very low cost. Give us a call, (603)669-3022.
 
 Free Estimate
 
-Before our PC specialists do anything that could cost you money, they will give you a Free In-Store estimate. Some times it’s a simple solution that can help you keep your hard earned cash. Here are a few options encase things get a little more complicated.
+Before our PC specialists do anything that could cost you money, they will give you a Free In-Store estimate. Some times it's a simple solution that can help you keep your hard earned cash. Here are a few options encase things get a little more complicated.
 
-$49.95 – Virus Scan and Removal
+$49.95 - Virus Scan and Removal
 
 If your computer has gotten a virus then we have the tools to find it and remove it for a low price of $49.95. Included is our standard hardware check-up and debris cleaning both inside and out. And yes, we guarantee our work.
 
-$109.95 – Data Wipe and Rebuild
+$109.95 - Data Wipe and Rebuild
 
-If the virus has been active in your computer for a while then chances are it’s tainted many of your operating system files. When it reaches that level of contamination then a data wipe and OS restoration will be necessary. Before any rebuilding occurs we save all undamaged files to an external drive.  Your system is then restored to a fresh virus free state, along with your saved files. Included is our standard hardware check-up and debris cleaning both inside and out. Did I mention we guarantee our work? 😉
+If the virus has been active in your computer for a while then chances are it's tainted many of your operating system files. When it reaches that level of contamination then a data wipe and OS restoration will be necessary. Before any rebuilding occurs we save all undamaged files to an external drive.  Your system is then restored to a fresh virus free state, along with your saved files. Included is our standard hardware check-up and debris cleaning both inside and out. Did I mention we guarantee our work? 😉
