--- a/ace-comp/pages/data-recovery.html
+++ b/ace-comp/pages/data-recovery.html
@@ -2,7 +2,7 @@ Ace Computer - Data Recovery
 
 Data Recovery
 
-ACE Computer offers advanced data recovery services and solutions, backed by customer service and support that’s second to none: Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.
+ACE Computer offers advanced data recovery services and solutions, backed by customer service and support that's second to none: Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.
 
 Technology professionals trust and rely on us to provide reliable solutions and expertise when it comes to their hard drive data recovery needs. Our recovery specialists and customer service staff will support and assist you with the entire recovery process.
 
