--- a/ace-comp/pages/networking.html
+++ b/ace-comp/pages/networking.html
@@ -2,7 +2,7 @@ Ace Computer - Networking
 
 Computer Network Support Specialists
 
-Ace Computer’s Networking and Maintenance Division can help you select from an array of new technologies and deploy them to your greatest advantage. Our technical expertise extends from complex IP data networks to advanced infrastructures incorporating wireless technologies, LAN technologies, and storage and content networks. Everything you need to seamlessly connect employees, partners and customers, increase productivity, improve network management and reduce expenses.
+Ace Computer's Networking and Maintenance Division can help you select from an array of new technologies and deploy them to your greatest advantage. Our technical expertise extends from complex IP data networks to advanced infrastructures incorporating wireless technologies, LAN technologies, and storage and content networks. Everything you need to seamlessly connect employees, partners and customers, increase productivity, improve network management and reduce expenses.
 
 Computer Network Infrastructure
 
