--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -20,9 +20,9 @@
       <ul class="top-nav">
         <li><a href="#"><span class="material-symbols-outlined">home</span></a></li>
         <li><a href="#repair">computer repair</a></li>
-        <li><a href="#">spyware removal</a></li>
-        <li><a href="#">data recovery</a></li>
-        <li><a href="#">networks</a></li>
+        <li><a href="#spyware">spyware removal</a></li>
+        <li><a href="#data">data recovery</a></li>
+        <li><a href="#networks">networks</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
@@ -55,7 +55,7 @@
     <h2>What Makes ACE Computer Different?</h2>
     <p>Simple. We're local. We're right down the street. We live &amp; raise our families in the same town as you. That makes us neighbors - and we care about you &amp; your quality of life, both on the job &amp; while out enjoying our great community.</p>
     <p><strong>Ace Computer</strong> is a professional computer repair &amp; networking consulting firm located in <strong>Manchester, New Hampshire</strong>. Our highly trained staff &amp; consultants are dedicated to providing your company with excellent service &amp; support with the utmost in professionalism &amp; experience.
-    <p>Here is a list of services that we can offer you or your company:</p>
+    <p>Here is a list of services that we can offer you and your company:</p>
 
     <ul class="about-list">
       <li>Expert network design, installation, &amp; support.</li>
@@ -72,8 +72,71 @@
     <h2 id="repair">Save With On-Site Computer Repair</h2>
     <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site computer repair means that we come to your office to repair your computers - no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
 
-    <h2>Free In-Store Consultation and Estimate</h2>
+    <h2>Computer Running Slow?</h2>
+    <h3>Help for your PC</h3>
+
+    <p>Not sure if your computer has contracted spyware or a deadly virus? If you've noticed a dramatic drop in your PC's performance, chances are it could have.</p>
+
+    <p><strong>ACE Computer</strong> is ready to diagnose and remove any foreign programs quickly and for a very low cost. Give us a call: <a href="tel:603-669-3022">(603) 669-3022</a>.</p>
+
+    <h3>Free Estimate</h3>
+
+    <p>Before our PC specialists do anything that could cost you money, they will give you a Free In-Store estimate. Some times it's a simple solution that can help you keep your hard earned cash. Here are a few options encase things get a little more complicated.</p>
+
+    <h3>$49.95 - Virus Scan &amp; Removal</h3>
+
+    <p>If your computer has a virus, we have the tools to find &amp; remove it. Included, is our standard hardware check-up &amp; debris cleaning - both inside &amp; out. Our work is guaranteed.</p>
+
+    <h3>$109.95 - Data Wipe &amp; Rebuild</h3>
+
+    <p class="last">If the virus has been active in your computer for a while then chances are it's tainted many of your operating system files. When it reaches that level of contamination then a data wipe and OS restoration will be necessary. Before any rebuilding occurs we save all undamaged files to an external drive. Your system is then restored to a fresh virus free state, along with your saved files. Included is our standard hardware check-up and debris cleaning both inside and out. Did I mention we guarantee our work? 😉</p>
+
+    <h2>Free In-Store Consultation &amp; Estimate</h2>
     <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
+
+    <h2 id="spyware">Computer Spyware Removal</h2>
+    <p>It is important to keep your computer data secure and safe. Having an up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses may destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
+
+    <p>If you suspect your computer system is infected with a virus and you have virus protection software installed, it is recommended that you update that software and run a full system scan. If your system has a virus and you can’t get rid of it, our technicians can remove it and restore any files needed to get your system up and running.</p>
+
+    <p class="last">We also sell and install the latest Virus Protection Software.</p>
+
+    <h2 id="data">Data Recovery</h2>
+    <p>We offer advanced data recovery services and solutions, backed by customer service and support that's second to none. Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.</p>
+
+    <p>Technology professionals trust and rely on us to provide reliable solutions and expertise when it comes to their hard drive data recovery needs. Our recovery specialists and customer service staff will support and assist you with the entire recovery process.</p>
+
+    <p>We have an in-depth understanding of most hard drive architecture, and a team of software engineers ready to develop custom solutions when needed for the most challenging recovery cases.</p>
+
+    <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, call our data recovery service processionals today for a free consultation and to learn how our free in store evaluation service can help you to quickly and completely salvage your lost data.</p>
+
+    <h2 id="networks">Computer Network Support Specialists</h2>
+
+    <p>Our Networking and Maintenance Division can help you select from an array of new technologies and deploy them to your greatest advantage. Our technical expertise extends from complex IP data networks to advanced infrastructures incorporating wireless technologies, LAN technologies, and storage and content networks. Everything you need to seamlessly connect employees, partners and customers, increase productivity, improve network management and reduce expenses.</p>
+
+    <h3>Computer Network Infrastructure</h3>
+
+    <p>Improve the performance and resiliency of your existing network while reducing overall costs.</p>
+
+    <h3>Network Baseline Assessment</h3>
+
+    <p>Evaluates overall network performance to pinpoint areas for enhancement and improved resource utilization.</p>
+
+    <h3>Network Architecture Design</h3>
+
+    <p>Focuses on determining the optimal infrastructure design to meet your business requirements.</p>
+
+    <h3>Network Implementation</h3>
+
+    <p>Focuses on integrating new networking systems without disrupting your ongoing business operations.</p>
+
+    <h3>Wireless Networks</h3>
+
+    <p>Increase network flexibility, productivity and cost-effectiveness with the latest wireless protocols: IEEE 802.11 protocol, RF engineering and spectrum allocation, large-scale wireless network design, and wireless security architecture.</p>
+
+    <h3>Storage & Content Networking</h3>
+
+    <p class="last">Develop a storage strategy and content network architecture to meet your business needs and reduce the stress on your storage servers and network.</p>
 
     <h2>Computer Upgrades and Maintenance</h2>
     <p>While we're at your office(s), we can also study your existing computer systems, consult with you to find out what your company needs to function efficiently, and deliver a proposal &amp; estimate designed to improve your system (if required) based upon what is needed for your specific needs.</p>
