oops again - html layout fixes

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -47,7 +47,7 @@
   </section>
 
   <section class="main">
-    <h1 class="last">Computer &amp; Laptop Repair | Data Recovery & Spyware, Virus Removal</h1>
+    <h1 id="repair" class="last">Computer &amp; Laptop Repair | Data Recovery & Spyware, Virus Removal</h1>
 
     <h2>ACE Computer, Manchester NH Computer and Networking Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
@@ -69,13 +69,12 @@
       <li>We install &amp; service all Microsoft Windows platforms as well as Mac OSX.</li>
     </ul>
 
-    <h2 id="repair">Save With On-Site Computer Repair</h2>
+    <h2>Save With On-Site Computer Repair</h2>
     <p class="last">No need to hire full-time IT “Information Technology” computer staff. <strong>ACE Computer</strong> on-site computer repair means that we come to your office to repair your computers - no need to waste your employees valuable work time in carting computer equipment to repair shops. Our on-site computer repair is the fastest way to get your computers or computer network repaired.</p>
 
     <h2>Computer Running Slow?</h2>
     <h3>Help for your PC</h3>
     <p>Not sure if your computer has contracted spyware or a deadly virus? If you've noticed a dramatic drop in your PC's performance, chances are it could have.</p>
-
     <p><strong>ACE Computer</strong> is ready to diagnose and remove any foreign programs quickly and for a very low cost. Give us a call: <a href="tel:603-669-3022">(603) 669-3022</a>.</p>
 
     <h3>Free Estimate</h3>
@@ -92,18 +91,13 @@
 
     <h2 id="spyware">Computer Spyware Removal</h2>
     <p>It is important to keep your computer data secure and safe. Having an up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses may destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
-
     <p>If you suspect your computer system is infected with a virus and you have virus protection software installed, it is recommended that you update that software and run a full system scan. If your system has a virus and you can’t get rid of it, our technicians can remove it and restore any files needed to get your system up and running.</p>
-
     <p class="last">We also sell and install the latest Virus Protection Software.</p>
 
     <h2 id="data">Data Recovery</h2>
     <p>We offer advanced data recovery services and solutions, backed by customer service and support that's second to none. Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.</p>
-
     <p>Technology professionals trust and rely on us to provide reliable solutions and expertise when it comes to their hard drive data recovery needs. Our recovery specialists and customer service staff will support and assist you with the entire recovery process.</p>
-
     <p>We have an in-depth understanding of most hard drive architecture, and a team of software engineers ready to develop custom solutions when needed for the most challenging recovery cases.</p>
-
     <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, call our data recovery service processionals today for a free consultation and to learn how our free in store evaluation service can help you to quickly and completely salvage your lost data.</p>
 
     <h2 id="networks">Computer Network Support Specialists</h2>
