css responsive tweaks - add gicons

--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -37,8 +37,8 @@
         <div class="header-text">
           <h1 class="site-title">ACE Computer</h1>
           <h2 class="site-description">PC Repair & Networking Specialists</h2>
-          <h3>1271 Elm Street | Manchester, NH 03103</h3>
-          <h3 class="phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
+          <h3 class="site-description">1271 Elm Street | Manchester, NH 03103</h3>
+          <h3 class="site-description phone"><a href="tel:603-669-3022">(603) 669-3022</a></h3>
         </div>
 
       </div>
@@ -47,7 +47,7 @@
   </section>
 
   <section class="main">
-    <h1 id="repair" class="last">Computer &amp; Laptop Repair | Data Recovery & Spyware, Virus Removal</h1>
+    <h1 id="repair">Computer &amp; Laptop Repair | Data Recovery & Spyware, Virus Removal</h1>
 
     <h2>ACE Computer, Manchester NH Computer and Networking Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
@@ -89,18 +89,18 @@
     <h2>Free In-Store Consultation &amp; Estimate</h2>
     <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
 
-    <h2 id="spyware">Computer Spyware Removal</h2>
+    <h2 id="spyware" class="g-icon"><span class="material-symbols-outlined">bug_report</span>Computer Spyware Removal</h2>
     <p>It is important to keep your computer data secure and safe. Having an up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses may destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
-    <p>If you suspect your computer system is infected with a virus and you have virus protection software installed, it is recommended that you update that software and run a full system scan. If your system has a virus and you can’t get rid of it, our technicians can remove it and restore any files needed to get your system up and running.</p>
+    <p>If you suspect your computer system is infected with a virus and you have virus protection software installed, it is recommended that you update that software and run a full system scan. If your system has a virus and you can't get rid of it, our technicians can remove it and restore any files needed to get your system up and running.</p>
     <p class="last">We also sell and install the latest Virus Protection Software.</p>
 
-    <h2 id="data">Data Recovery</h2>
+    <h2 id="data" class="g-icon"><span class="material-symbols-outlined">database</span>Data Recovery</h2>
     <p>We offer advanced data recovery services and solutions, backed by customer service and support that's second to none. Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.</p>
     <p>Technology professionals trust and rely on us to provide reliable solutions and expertise when it comes to their hard drive data recovery needs. Our recovery specialists and customer service staff will support and assist you with the entire recovery process.</p>
     <p>We have an in-depth understanding of most hard drive architecture, and a team of software engineers ready to develop custom solutions when needed for the most challenging recovery cases.</p>
     <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, call our data recovery service processionals today for a free consultation and to learn how our free in store evaluation service can help you to quickly and completely salvage your lost data.</p>
 
-    <h2 id="networks">Computer Network Support Specialists</h2>
+    <h2 id="networks" class="g-icon"><span class="material-symbols-outlined">hub</span>Computer Network Support Specialists</h2>
     <p>Our Networking and Maintenance Division can help you select from an array of new technologies and deploy them to your greatest advantage. Our technical expertise extends from complex IP data networks to advanced infrastructures incorporating wireless technologies, LAN technologies, and storage and content networks. Everything you need to seamlessly connect employees, partners and customers, increase productivity, improve network management and reduce expenses.</p>
 
     <h3>Computer Network Infrastructure</h3>
@@ -125,25 +125,25 @@
     <p>While we're at your office(s), we can also study your existing computer systems, consult with you to find out what your company needs to function efficiently, and deliver a proposal &amp; estimate designed to improve your system (if required) based upon what is needed for your specific needs.</p>
     <p>Find out about our Proactive Service &amp; Maintenance Plan which can help reduce your computer and network maintenance costs while keeping your computers in their proper running condition.</p>
 
-    <!-- PAGE ANCHOR - ACCOMODATE VARIED NAV HEIGHT -->
+    <!-- PAGE ANCHORS (ALL) - CSS TO ACCOMODATE RESPONSIVE NAV HEIGHT -->
     <span id="contact">&nbsp;</span>
     <div class="main-bottom">
-      <h2>Office Hours</h2>
+      <h2 class="g-icon"><span class="material-symbols-outlined">schedule</span>Office Hours</h2>
       <p class="last">Monday - Friday : 8:30AM to 5:30PM<br />
         Saturday : 10:00AM to 12:30PM</p>
 
-      <h2>Reach Out To Us</h2>
+      <h2 class="g-icon"><span class="material-symbols-outlined">contact_support</span>Reach Out To Us</h2>
       <p class="last">Phone: <a href="tel:603-669-3022">(603) 669-3022</a><br />
         Emergency: <a href="tel:603-235-2752">(603) 235-2752</a><br />
         Fax: (603) 669-3420</p>
 
-      <h2>Yes, You Can Email Us Too</h2>
+      <h2 class="g-icon"><span class="material-symbols-outlined">mail</span>Yes, You Can Email Us Too</h2>
       <p class="last">Email your computer related problems &amp; questions to: <a href="mailto:blankemailfornow@email.com?subject=from ACE website &body=this is my problem...">blankemailfornow@email.com</a></p>
 
-      <h2>Payment Options</h2>
+      <h2 class="g-icon"><span class="material-symbols-outlined">credit_card</span><span class="material-symbols-outlined">paid</span>Payment Options</h2>
       <p class="last">We accept all major credit cards, checks &amp; cash.</p>
 
-      <h2>Location / Directions</h2>
+      <h2 class="g-icon"><span class="material-symbols-outlined">location_on</span>Location / Directions</h2>
       <p>1271 Elm Street<br />
         Manchester, NH 03103</p>
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.150190108867!2d-71.46517013952003!3d42.99617194410063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e24f253d262bdd%3A0x74f4cf4de4424a82!2sAce%20Computer!5e0!3m2!1sen!2sus!4v1670453409934!5m2!1sen!2sus" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
