--- a/ace-comp/index.html
+++ b/ace-comp/index.html
@@ -49,7 +49,8 @@
   <section class="main">
     <h1 id="repair">Computer &amp; Laptop Repair | Data Recovery & Spyware, Virus Removal</h1>
 
-    <h2>ACE Computer, Manchester NH Computer and Networking Specialists</h2>
+    <h2>ACE Computer Manchester NH<br />
+      Computer Network Specialists</h2>
     <p class="last">Having <strong>ACE Computer</strong> on your team is like having your own in-house IT personnel to repair &amp; maintain your computers &amp; network. Within minutes of your telephone request, a dedicated service manager will be on the phone with you, reviewing your service request &amp; dispatching a professional, friendly, qualified service technician to get you up &amp; running quickly.</p>
 
     <h2>What Makes ACE Computer Different?</h2>
@@ -80,25 +81,25 @@
     <h3>Free Estimate</h3>
     <p>Before our PC specialists do anything that could cost you money, they will give you a Free In-Store estimate. Some times it's a simple solution that can help you keep your hard earned cash. Here are a few options encase things get a little more complicated.</p>
 
-    <h3>$49.95 - Virus Scan &amp; Removal</h3>
+    <h3><span class="gold-highlight">49.95</span> - Virus Scan &amp; Removal</h3>
     <p>If your computer has a virus, we have the tools to find &amp; remove it. Included, is our standard hardware check-up &amp; debris cleaning - both inside &amp; out. Our work is guaranteed.</p>
 
-    <h3>$109.95 - Data Wipe &amp; Rebuild</h3>
+    <h3><span class="gold-highlight">109.95</span> - Data Wipe &amp; Rebuild</h3>
     <p class="last">If the virus has been active in your computer for a while then chances are it's tainted many of your operating system files. When it reaches that level of contamination then a data wipe and OS restoration will be necessary. Before any rebuilding occurs we save all undamaged files to an external drive. Your system is then restored to a fresh virus free state, along with your saved files. Included is our standard hardware check-up and debris cleaning both inside and out. Did I mention we guarantee our work? 😉</p>
 
     <h2>Free In-Store Consultation &amp; Estimate</h2>
     <p class="last">That's right. Your in-store consultation is free. Our technicians have an average of 10+ years of experience in the computer repair field, and can sort out your computer problems so that they're working as needed.</p>
 
     <h2 id="spyware" class="g-icon"><span class="material-symbols-outlined">bug_report</span>Computer Spyware Removal</h2>
-    <p>It is important to keep your computer data secure and safe. Having an up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses may destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
+    <p>It is important to keep your computer data secure and safe. Having up to date Virus Protection Software is one of the most important responsibilities of safe, trouble free computing. Without virus protection, viruses can destroy data, disclose data, replicate itself to friends, and render your computer unusable.</p>
     <p>If you suspect your computer system is infected with a virus and you have virus protection software installed, it is recommended that you update that software and run a full system scan. If your system has a virus and you can't get rid of it, our technicians can remove it and restore any files needed to get your system up and running.</p>
-    <p class="last">We also sell and install the latest Virus Protection Software.</p>
+    <p class="last">We also sell &amp; install the latest Virus Protection Software.</p>
 
     <h2 id="data" class="g-icon"><span class="material-symbols-outlined">database</span>Data Recovery</h2>
-    <p>We offer advanced data recovery services and solutions, backed by customer service and support that's second to none. Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.</p>
+    <p>We offer advanced data recovery services and solutions, backed by customer service &amp; support that's second to none. Our innovative tools and methods of data recovery services and solutions for failed and crashed hard drive and Server RAID recovery approaches are the most innovative.</p>
     <p>Technology professionals trust and rely on us to provide reliable solutions and expertise when it comes to their hard drive data recovery needs. Our recovery specialists and customer service staff will support and assist you with the entire recovery process.</p>
     <p>We have an in-depth understanding of most hard drive architecture, and a team of software engineers ready to develop custom solutions when needed for the most challenging recovery cases.</p>
-    <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, call our data recovery service processionals today for a free consultation and to learn how our free in store evaluation service can help you to quickly and completely salvage your lost data.</p>
+    <p class="last">If you have a failed, crashed, or malfunctioning hard disk drive or server RAID array, <a href="tel:603-669-3022">call our data recovery service professionals today</a> for a free consultation and to learn how our free in store evaluation service can help you to quickly &amp; completely salvage lost data.</p>
 
     <h2 id="networks" class="g-icon"><span class="material-symbols-outlined">hub</span>Computer Network Support Specialists</h2>
     <p>Our Networking and Maintenance Division can help you select from an array of new technologies and deploy them to your greatest advantage. Our technical expertise extends from complex IP data networks to advanced infrastructures incorporating wireless technologies, LAN technologies, and storage and content networks. Everything you need to seamlessly connect employees, partners and customers, increase productivity, improve network management and reduce expenses.</p>
